namespace SEM5_PI_WEBAPI.Domain.VesselType;

public class VesselTypeID
{
    
}